# Revert part of [#24140] so that database password is not required during installation
# Fix typo in language XML file
# [#23818] com_content - Category List - New Article: pressing cancel produces error: "You are not permitted to use that link to directly access that page (#10)"
# [#23853] The last superuser can remove himself from the SU group
# [#24167] Notice in the router

05-Jan-2011 Christophe Demko
 # [#24133] Beez templates set role search on the wrong element (Rouven Weßling)
 # [#24135] 2 minor issue with JForm's email field (Rouven Weßling)
 # [#24139] A couple of possible extraneous images in Admin (Andrea Tarr)
 # [#24085] Menu id is lost after apply task. (Edgars Piruška)
 # [#23772] Page cache only applies to NON guest users; shouldn´t it be vice versa? (Rouven Weßling)
 # [#22599] Folder view not updating when deleting folders (Janich Rasmussen, Mathavan Jeyadev)
 # [#23827] Option to display Blog subcategory content within Blog is missing (bill richardson)

05-Jan-2011 Jean-Marie Simonet
 # Commented out loading of lib_joomla.ini during installation
 # [#24140] Required field missing in installation database.xml + some
 # Updating xx-XX.banners.ini
 $ Adding de-DE, da-DK, zh-TW, km-KH, sv-SE, hu-HU, bg-BG, th-TH, fr-FR, it-IT in installation
 $ Correcting parse error in string.

05-Jan-2011 Andrew Eddie
 # Fixed issue [#21275] Incorrect date format used when tracking banner clicks, causing Error: 500 when clicking on a banner (Cy Lee, Troy Hall).
 # Fixed issue [#23717] Add a field for E-Mail to JForm (Rouven Weßling).
 # Fixed issue [#23891] Toggle enabled state in User Manager (Sander Potjer, Bill Richardson).
 # Fixed issue [#22750] Quick 2h code review: 10 real bugs (files and line numbers included) (Matias Griese, Dennis Hermatski, Elin Waring).
 # Fixed issue [#22659] Debug plugin doesn't show 'afterRender' profiler mark and can't gather statistics of other system plugins (Dennis Hermatski).